# workflow_automation_mvp

./: .gitignore  README.md  pyproject.toml
data/custom_docs/: custom.md
data/input_docs/: plain.txt
tests/: test_cli.py  test_executor.py  test_knowledge_executor.py  test_pipeline_executor.py  test_registry.py  test_telegram.py  test_workflow.py
workflow_automation/: cli.py  executor.py  knowledge_executor.py  pipeline_executor.py  registry.py  runner.py  telegram.py  workflow.py
workflows/: sample.workflow  sample.workflow.json
