[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-automation-mvp"
version = "0.1.0"
description = "Workflow Automation MVP for orchestrating reusable RADAR utility pipelines."
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["workflow_automation*"]
exclude = ["data*", "outputs*", "tests*", "workflows*"]

[project.scripts]
auto-run = "workflow_automation.cli:main"
